--- a/cliente/src/app/auth/login/login.component.html
+++ b/cliente/src/app/auth/login/login.component.html
@@ -1,11 +1,20 @@
-<div class="login">
+<div class="container">
+
+  <div class="login">
     <div class="login-triangle"></div>
     
     <h2 class="login-header">Log in</h2>
   
-    <form class="login-container">
-      <p><input type="email" placeholder="Email"></p>
-      <p><input type="password" placeholder="Password"></p>
-      <p><input type="submit" value="Log in"></p>
+    <!--<form class="login-container"> -->
+     <form #frmLogin="ngForm" class="login-container" (ngSubmit)="onLogin(frmLogin)">
+      <p>
+        <input type="text" name='alias' placeholder="Usuario" ngModel required></p>
+      <p>
+        <input type="password" name='password' placeholder="Password" ngModel required></p>
+      <p>
+        <input type="submit" value="Log in"></p>
     </form>
   </div>
+
+
+</div>
