--- a/cliente/src/app/auth/login/login.component.html
+++ b/cliente/src/app/auth/login/login.component.html
@@ -1,10 +1,11 @@
 <div class="container">
 
   <div class="login">
+    <h1>Restaurante los Primeos</h1>
     <div class="login-triangle"></div>
     
     <h2 class="login-header">Log in</h2>
-  
+   
     <!--<form class="login-container"> -->
      <form #frmLogin="ngForm" class="login-container" (ngSubmit)="onLogin(frmLogin)">
       <p>
