--- a/cliente/src/app/auth/login/login.component.html
+++ b/cliente/src/app/auth/login/login.component.html
@@ -1,7 +1,7 @@
 <div class="container">
 
   <div class="login">
-    <h1>Restaurante los Primeos</h1>
+    <h1>Restaurante los Primos</h1>
     <div class="login-triangle"></div>
     
     <h2 class="login-header">Log in</h2>
