--- a/cliente/src/app/auth/login/login.component.html
+++ b/cliente/src/app/auth/login/login.component.html
@@ -3,8 +3,8 @@
   <div class="login">
     <h1>Restaurante los Primos</h1>
     
-    <body background="C:\Users\William M Sandoval\Desktop\imagen.jpg" > </body>
-    
+    <body background="C:\Users\William M Sandoval\Desktop\imagen.jpg" > 
+    </body>
     <div class="login-triangle"></div>
     
     <h2 class="login-header">Log in</h2>
