seguimiento de pureba api rest

--- a/cliente/src/app/auth/login/login.component.html
+++ b/cliente/src/app/auth/login/login.component.html
@@ -2,6 +2,7 @@
 
   <div class="login">
     <h1>Restaurante los Primos</h1>
+    <h2>prueba de api reset</h2>
     
     <body background="C:\Users\William M Sandoval\Desktop\imagen.jpg" > 
     </body>
