--- a/cliente/src/app/components/login/login.component.html
+++ b/cliente/src/app/components/login/login.component.html
@@ -10,7 +10,7 @@
         <p>
           <input type="text" name='alias' placeholder="Usuario"></p>
         <p>
-          <input type="password" name='password' placeholder="Password"></p>
+          <input type="password" name='pass' placeholder="Password"></p>
         <p>
           <input type="submit" value="Log in"></p>
       </form>
