--- a/cliente/src/app/components/login/login.component.html
+++ b/cliente/src/app/components/login/login.component.html
@@ -6,13 +6,13 @@
       <h2 class="login-header">Log in</h2>
     
       <!--<form class="login-container"> -->
-       <form #frmLogin="" class="login-container">
+       <form class="login-container" method="POST">
         <p>
-          <input type="text" name='alias' placeholder="Usuario"></p>
+          <input type="text" [(ngModel)]="alias" name='alias' placeholder="Usuario" required="required"></p>
         <p>
-          <input type="password" name='pass' placeholder="Password"></p>
+          <input type="password" [(ngModel)]="pass" name='pass' placeholder="Password" required="required"></p>
         <p>
-          <input type="submit" value="Log in"></p>
+          <input type="submit" (click)="login()" value="Log in"></p>
       </form>
     </div>
   
