--- a/cliente/src/app/auth/login/login.component.html
+++ b/cliente/src/app/auth/login/login.component.html
@@ -12,11 +12,11 @@
       <p>
         <input type="text" name='alias' placeholder="Usuario" ngModel required></p>
       <p>
-        <input type="password" name='password' placeholder="Password" ngModel required></p>
+        <input type="password" name='pass' placeholder="Password" ngModel required></p>
       <p>
         <input type="submit" value="Log in"></p>
     </form>
   </div>
 
-
+<h1></h1>
 </div>
