--- a/cliente/src/app/components/login/login.component.html
+++ b/cliente/src/app/components/login/login.component.html
@@ -6,13 +6,13 @@
       <h2 class="login-header">Log in</h2>
     
       <!--<form class="login-container"> -->
-       <form class="login-container" method="POST">
+       <form [formGroup]="loginForm" class="login-container" (ngSubmit)="onLogin()">
         <p>
-          <input type="text" [(ngModel)]="alias" name='alias' placeholder="Usuario" required="required"></p>
+          <input type="text" formControlName="alias" matInput placeholder="Usuario" required></p>
         <p>
-          <input type="password" [(ngModel)]="pass" name='pass' placeholder="Password" required="required"></p>
+          <input type="password" formControlName="pass" matInput placeholder="Password" required></p>
         <p>
-          <input type="submit" (click)="login()" value="Log in"></p>
+          <input type="submit" mat-raised-button value="Log in"></p>
       </form>
     </div>
   
