estamos comrtiendo login
login

--- a/cliente/src/app/auth/login/login.component.html
+++ b/cliente/src/app/auth/login/login.component.html
@@ -1,20 +1,54 @@
-<div class="container">
 
-  <div class="login">
-    <div class="login-triangle"></div>
-    
-    <h2 class="login-header">Log in</h2>
+<!DOCTYPE html>
+<html lang="en">
+<head>
   
-    <!--<form class="login-container"> -->
-     <form #frmLogin="ngForm" class="login-container" (ngSubmit)="onLogin(frmLogin)">
-      <p>
-        <input type="text" name='alias' placeholder="Usuario" ngModel required></p>
-      <p>
-        <input type="password" name='password' placeholder="Password" ngModel required></p>
-      <p>
-        <input type="submit" value="Log in"></p>
-    </form>
-  </div>
+  <link rel="stylesheet" href="login.component.css">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+ 
+ 
+</head>
+<div class="color"></div>
 
 
-</div>
+<body>
+  
+  
+
+    
+      <header class="bg-primary text-white">
+        
+        <h1 class="titled" >Restaurante Antigueño </h1>
+        <a href="" > Reguistro de usuario del Restaurante</a>
+      
+      </header>
+
+      <header > 
+      <div class="login">
+
+        <article class="fondo" >
+      
+
+          <h3>Inciar sesion</h3>
+          <form class="" action="index.html" method="post">
+            <input class="inp" type="text" name="user" value="" placeholder="Ingresa tu nombre de usuario: Marlon"  ><br>
+            <input class="inp" type="password" name="pass" value="" placeholder="ingresa tu contraseña: 1234*9"><br>
+
+            <input class="btn" type="submit" name="inicio" value="Iniciar Sesión">
+          </form>
+        </article>
+      
+      </div>
+    </header>
+    
+      
+      </body>
+    
+
+</html>
+
