--- a/cliente/src/app/components/login/login.component.html
+++ b/cliente/src/app/components/login/login.component.html
@@ -8,9 +8,9 @@
       <!--<form class="login-container"> -->
        <form class="login-container" method="POST">
         <p>
-          <input type="text" [(ngModel)]="alias" name='alias' placeholder="Usuario" required="required"></p>
+          <input type="text" [(ngModel)]="username" name='username' placeholder="Usuario" required="required"></p>
         <p>
-          <input type="password" [(ngModel)]="pass" name='pass' placeholder="Password" required="required"></p>
+          <input type="password" [(ngModel)]="password" name='password' placeholder="Password" required="required"></p>
         <p>
           <input type="submit" (click)="login()" value="Log in"></p>
       </form>
