--- a/cliente/src/app/components/perfil/perfil.component.html
+++ b/cliente/src/app/components/perfil/perfil.component.html
@@ -1,7 +1,107 @@
-<div>
+<!-- <div>
     <form>
                 
-        <a routerLink ="/usuarios"><img border="0" src="https://asknoetictips.files.wordpress.com/2017/09/usuario-registrado.jpg" width="90" height="70"></a>
+        <a onclick="myFunction()"><img border="0" src="https://asknoetictips.files.wordpress.com/2017/09/usuario-registrado.jpg" width="90" height="70"></a>
         
     </form>
 </div>
+ 
+
+<script> function myFunction() 
+    { 
+    
+    var search = document.getElementById("searchtext").value; 
+    window.location = '/search?q='+search; 
+    } 
+    </script>
+
+
+ -->
+
+
+<html>
+	<head>
+		<title>Menu Desplegable</title>
+		<style type="text/css">
+			
+			* {
+				margin:0px;
+				padding:0px;
+			}
+			
+			#header {
+				margin:auto;
+				width:500px;
+				font-family:Arial, Helvetica, sans-serif;
+			}
+			
+			ul, ol {
+				list-style:none;
+			}
+			
+			.nav {
+				width:500px; /*Le establecemos un ancho*/
+				margin:0 auto; /*Centramos automaticamente*/
+			}
+ 
+			.nav > li {
+				float:left;
+			}
+			
+			.nav li a {
+				background-color:#000;
+				color:#fff;
+				text-decoration:none;
+				padding:10px 12px;
+				display:block;
+			}
+			
+			.nav li a:hover {
+				background-color:#434343;
+			}
+			
+			.nav li ul {
+				display:none;
+				position:absolute;
+				min-width:140px;
+			}
+			
+			.nav li:hover > ul {
+				display:block;
+			}
+			
+			.nav li ul li {
+				position:relative;
+			}
+			
+			.nav li ul li ul {
+				right:-140px;
+				top:0px;
+			}
+			
+		</style>
+	</head>
+	<body>
+		<div id="header">
+			<nav> <!-- Aqui estamos iniciando la nueva etiqueta nav -->
+				<ul class="nav">
+					<li><a>Usuarios</a>
+						<ul>
+							<li><a href="/crear_usuarios">Agregar Usuarios</a></li>
+							<li><a href="/editar_usuarios">Editar Usuarios</a></li>
+						</ul>
+					</li>
+					<li><a href="">Work</a>
+						<ul>
+							<li><a href="">Submenu1</a></li>
+							<li><a href="">Submenu2</a></li>
+							<li><a href="">Submenu3</a></li>
+							<li><a href="">Submenu4</a></li>
+						</ul>
+					</li>
+					
+				</ul>
+			</nav><!-- Aqui estamos cerrando la nueva etiqueta nav -->
+		</div>
+	</body>
+</html>
