--- a/cliente/src/app/components/usuarios/usuarios.component.html
+++ b/cliente/src/app/components/usuarios/usuarios.component.html
@@ -14,7 +14,7 @@
         <p>
             <input type="text" [(ngModel)]="usuarios.role" name='role' placeholder="Rol" required="required"></p>
         <p>
-          <input type="submit" (click)="registrar()" value="Guardar"></p>
+          <input type="submit" (click)="edit ? editar() : registrar()" value="Guardar"></p>
       </form>
     </div>
   
