--- a/cliente/src/app/components/usuarios2/usuarios2.component.html
+++ b/cliente/src/app/components/usuarios2/usuarios2.component.html
@@ -10,7 +10,7 @@
         
     <div class="card-body">
         <p>{{usuario.role}}</p>
-        <a href="" class="btn btn-info btn-block">Editar Usuario</a>
+        <a [routerLink]="['/editar_usuarios', usuario.id]" class="btn btn-info btn-block">Editar Usuario</a>
 
     </div>
 
