--- a/cliente/src/app/components/perfil/perfil.component.html
+++ b/cliente/src/app/components/perfil/perfil.component.html
@@ -91,15 +91,19 @@
 							<li><a href="/editar_usuarios">Editar Usuarios</a></li>
 						</ul>
 					</li>
-					<li><a href="">Work</a>
+					<li><a href="">Bebidas</a>
 						<ul>
-							<li><a href="">Submenu1</a></li>
-							<li><a href="">Submenu2</a></li>
-							<li><a href="">Submenu3</a></li>
-							<li><a href="">Submenu4</a></li>
+							<li><a href="/crear_bebidas">Agregar Bebidas</a></li>
+							<li><a href="/editar_bebidas">Editar Bebidas</a></li>
 						</ul>
 					</li>
-					
+					<li><a href="">Works</a>
+						<ul>
+							<li><a href="">Works</a></li>
+							<li><a href="">Works</a></li>
+						</ul>
+					</li>
+
 				</ul>
 			</nav><!-- Aqui estamos cerrando la nueva etiqueta nav -->
 		</div>
