--- a/cliente/src/app/components/perfil/perfil.component.html
+++ b/cliente/src/app/components/perfil/perfil.component.html
@@ -97,6 +97,12 @@
 							<li><a href="/editar_bebidas">Editar Bebidas</a></li>
 						</ul>
 					</li>
+					<li><a href="">Complementos</a>
+						<ul>
+							<li><a href="/crear_complementos">Agregar Complementos</a></li>
+							<li><a href="/editar_complementos">Editar Complementos</a></li>
+						</ul>
+					</li>
 					<li><a href="">Works</a>
 						<ul>
 							<li><a href="">Works</a></li>
