--- a/cliente/src/app/components/bebidas/bebidas.component.html
+++ b/cliente/src/app/components/bebidas/bebidas.component.html
@@ -1,1 +1,19 @@
-<p>bebidas works!</p>
+<div class="container">
+
+    <div class="registro">
+      <div class="registro-triangle"></div>
+      
+      <h2 class="registro-header">Bebidas</h2>
+    
+      <form class="registro-container">
+        <p>
+          <input type="text" [(ngModel)]="bebidas.nombre" name='nombre' placeholder="Nombre" required="required"></p>
+        <p>
+            <input type="text" [(ngModel)]="bebidas.precio" name='precio' placeholder="Precio" required="required"></p>
+        <p>
+          <input type="submit" (click)="edit ? editar() : registrar()" value="Guardar"></p>
+      </form>
+    </div>
+  
+  
+  </div>
