redireccionamiento de formularios

--- a/cliente/src/app/components/perfil/perfil.component.html
+++ b/cliente/src/app/components/perfil/perfil.component.html
@@ -5,22 +5,22 @@
 			
 			* {
 				margin:0px;
-				padding:0px;
+				padding:3px;
 			}
 			
 			#header {
 				margin:auto;
-				width:500px;
-				font-family:Arial, Helvetica, sans-serif;
+				width:1200px;
+				font-family: Arial, Helvetica, sans-serif;
 			}
 			
 			ul, ol {
-				list-style:none;
+				list-style:none; 	
 			}
 			
 			.nav {
-				width:500px; /*Le establecemos un ancho*/
-				margin:0 auto; /*Centramos automaticamente*/
+				width:1200px; /*Le establecemos un ancho*/
+				margin:2 auto; /*Centramos automaticamente*/
 			}
  
 			.nav > li {
@@ -28,21 +28,21 @@
 			}
 			
 			.nav li a {
-				background-color:#000;
-				color:#fff;
+				background-color:rgb(15, 46, 71);
+				color:rgb(245, 241, 241);
 				text-decoration:none;
-				padding:10px 12px;
+				padding:50px 50px;
 				display:block;
 			}
 			
 			.nav li a:hover {
-				background-color:#434343;
+				background-color:#30cbd6;
 			}
 			
 			.nav li ul {
 				display:none;
 				position:absolute;
-				min-width:140px;
+				min-width:240px;
 			}
 			
 			.nav li:hover > ul {
@@ -54,7 +54,7 @@
 			}
 			
 			.nav li ul li ul {
-				right:-140px;
+				right:-240px;
 				top:0px;
 			}
 			
@@ -70,12 +70,12 @@
 							<li><a href="/editar_usuarios">Editar Usuarios</a></li>
 						</ul>
 					</li>
-					<li><a href="">Work</a>
+					<li><a href="">Pedido</a>
 						<ul>
-							<li><a href="">Submenu1</a></li>
-							<li><a href="">Submenu2</a></li>
-							<li><a href="">Submenu3</a></li>
-							<li><a href="">Submenu4</a></li>
+							<li><a href="">Menú</a></li>
+							<li><a href="">Bebidas</a></li>
+							<li><a href="">Complementos</a></li>
+							<li><a href="">Detalle Pedido</a></li>
 						</ul>
 					</li>
 					
