--- a/cliente/src/app/components/usuarios2/usuarios2.component.html
+++ b/cliente/src/app/components/usuarios2/usuarios2.component.html
@@ -1,4 +1,10 @@
+<div>
+<input type="radio" value="Cancelar" onclick="location.href='http://localhost:4200/perfil'" >
+<p>Cancelar</p>
+</div>
+
 <div class="col-md-2" *ngFor="let usuario of usuario">
+    
     <div class="card text-center">
         <div class="card-header bg-dark text-white d-flex justify-content-between align-items-center">
             {{usuario.username}}
@@ -11,6 +17,9 @@
     <div class="card-body">
         <p>{{usuario.role}}</p>
         <a [routerLink]="['/editar_usuarios', usuario.id]" class="btn btn-info btn-block">Editar Usuario</a>
+
+            
+     
 
     </div>
 
