--- a/cliente/src/app/components/bebidas/bebidas.component.html
+++ b/cliente/src/app/components/bebidas/bebidas.component.html
@@ -11,7 +11,7 @@
         <p>
             <input type="text" [(ngModel)]="bebidas.precio" name='precio' placeholder="Precio" required="required"></p>
         <p>
-          <input type="submit" (click)="edit ? editar() : registrar()" value="Guardar"></p>
+          <input type="submit" (click)="edit ? editar() : registrar()" value="Guardar"><input type="button" onclick="location.href='http://localhost:4200/perfil'" value="Cancelar"> </p>
       </form>
     </div>
   
