--- a/cliente/src/app/components/perfil/perfil.component.html
+++ b/cliente/src/app/components/perfil/perfil.component.html
@@ -1,22 +1,3 @@
-<!-- <div>
-    <form>
-                
-        <a onclick="myFunction()"><img border="0" src="https://asknoetictips.files.wordpress.com/2017/09/usuario-registrado.jpg" width="90" height="70"></a>
-        
-    </form>
-</div>
- 
-
-<script> function myFunction() 
-    { 
-    
-    var search = document.getElementById("searchtext").value; 
-    window.location = '/search?q='+search; 
-    } 
-    </script>
-
-
- -->
 
 
 <html>
@@ -26,12 +7,12 @@
 			
 			* {
 				margin:0px;
-				padding:0px;
+				padding:3px;
 			}
 			
 			#header {
 				margin:auto;
-				width:500px;
+				width:1200px;
 				font-family:Arial, Helvetica, sans-serif;
 			}
 			
@@ -40,7 +21,7 @@
 			}
 			
 			.nav {
-				width:500px; /*Le establecemos un ancho*/
+				width:1200px; /*Le establecemos un ancho*/
 				margin:0 auto; /*Centramos automaticamente*/
 			}
  
@@ -49,15 +30,15 @@
 			}
 			
 			.nav li a {
-				background-color:#000;
-				color:#fff;
+				background-color:rgb(15, 46, 71);
+				color:rgb(245, 241, 241)
 				text-decoration:none;
-				padding:10px 12px;
+				padding:50px 50px;
 				display:block;
 			}
 			
 			.nav li a:hover {
-				background-color:#434343;
+				background-color:#30cbd6;
 			}
 			
 			.nav li ul {
