--- a/cliente/src/app/components/login/login.component.css
+++ b/cliente/src/app/components/login/login.component.css
@@ -1,5 +1,3 @@
-
-
 .cajas{
     border-radius: 25px; 
 }
@@ -17,12 +15,9 @@
     background-color: rgba(0, 0, 0, 0);
 }
 
-.fondo{
-     margin:-28px;
-    padding: 6%;   
-    background: url(img1/Restaurante.jpg ) no-repeat;
-    background-size: cover;
-    background-position: center ;
-    background-attachment: fixed;
+.container{
+    
+    position: absolute;
+    top: 125px;
 }
 
