--- a/cliente/src/app/components/login/login.component.html
+++ b/cliente/src/app/components/login/login.component.html
@@ -7,15 +7,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
   <title>Restaurante antigueño</title>
- 
 </head>
-
 <body class="fondo_total">
-  <header class= "fondo">
+  <header class= "fondo2">
   <div class="container" >
-    
-      
-    
     <div class="login">
         
       <!--<form class="login-container"> -->
@@ -29,7 +24,6 @@
           <input class="boton" type="submit" (click)="login()" value="Log in"></p>
       </form>
     </div>
-  
   </div>
 </header>
 </body>
