--- a/cliente/src/app/components/navigation/navigation.component.html
+++ b/cliente/src/app/components/navigation/navigation.component.html
@@ -1,16 +1,23 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <div class="container">
-    <a class="navbar-brand" href="/">Inicio</a>
+
+
+<link rel="stylesheet" href="navigation.component.css">
+
+<nav class="navbar navbar-expand-lg bg-primary ">
+  <div class="container  bg-primary">
+    
+    <a class="navbar-brand text-white" href="/">Inicio</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+     
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item">
-          <a class="nav-link" href="/login">Iniciar Sesion</a>
+          
+          <a class="nav-link text-white" href="/login">Iniciar Sesion</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Cerrar Sesion</a>
+          <a class="nav-link text-white" href="#">Cerrar Sesion</a>
         </li>
         
       </ul>
@@ -18,5 +25,6 @@
 
   </div>
   </nav>
-
+  <header class="fondo1">
+  </header>
   
