aqui estoy poniendo fondo
funciones de css y tambien estamos enmaquetando con html

--- a/cliente/src/app/components/navigation/navigation.component.html
+++ b/cliente/src/app/components/navigation/navigation.component.html
@@ -1,5 +1,3 @@
-
-
 <link rel="stylesheet" href="navigation.component.css">
 
 <nav class="navbar navbar-expand-lg bg-primary ">
@@ -25,6 +23,7 @@
 
   </div>
   </nav>
-  <header class="fondo1">
-  </header>
   
+  
+  <header  alt="Responsive image" class="fondo1 img-fluid" >
+  </header>
