--- a/cliente/src/app/components/bebidas/bebidas.component.html
+++ b/cliente/src/app/components/bebidas/bebidas.component.html
@@ -5,7 +5,7 @@
       
       <h2 class="registro-header">Bebidas</h2>
     
-      <form class="registro-container">
+      <form class="registro-container" method="POST">
         <p>
           <input type="text" [(ngModel)]="bebidas.nombre" name='nombre' placeholder="Nombre" required="required"></p>
         <p>
