--- a/cliente/src/app/components/perfil/perfil.component.html
+++ b/cliente/src/app/components/perfil/perfil.component.html
@@ -72,19 +72,19 @@
 							<li><a href="/editar_usuarios">Editar Usuarios</a></li>
 						</ul>
 					</li>
-					<li><a href="">Bebidas</a>
+					<li><a>Bebidas</a>
 						<ul>
 							<li><a href="/crear_bebidas">Agregar Bebidas</a></li>
 							<li><a href="/editar_bebidas">Editar Bebidas</a></li>
 						</ul>
 					</li>
-					<li><a href="">Complementos</a>
+					<li><a>Complementos</a>
 						<ul>
 							<li><a href="/crear_complementos">Agregar Complementos</a></li>
 							<li><a href="/editar_complementos">Editar Complementos</a></li>
 						</ul>
 					</li>
-					<li><a href="">Works</a>
+					<li><a>Works</a>
 						<ul>
 							<li><a href="">Works</a></li>
 							<li><a href="">Works</a></li>
