--- a/cliente/src/app/components/bebidas2/bebidas2.component.html
+++ b/cliente/src/app/components/bebidas2/bebidas2.component.html
@@ -1,3 +1,8 @@
+<div>
+    <input type="radio" value="Cancelar" onclick="location.href='http://localhost:4200/perfil'" >
+    <p>Cancelar</p>
+</div>
+    
 <div class="col-md-2" *ngFor="let bebidas of bebidas">
     <div class="card text-center">
         <div class="card-header bg-dark text-white d-flex justify-content-between align-items-center">
