--- a/cliente/src/app/components/perfil/perfil.component.css
+++ b/cliente/src/app/components/perfil/perfil.component.css
@@ -1,2 +1,76 @@
 
+
+			
+  * {
+      margin:0px;
+      padding:0px;
+  }
+  
+  #header {
+      margin:auto;
+      width:500px;
+      font-family:Arial, Helvetica, sans-serif;
+  }
+  
+  ul, ol {
+      list-style:none;
+  }
+  
+  .nav {
+      width:500px; /*Le establecemos un ancho*/
+      margin:0 auto; /*Centramos automaticamente*/
+  }
+
+  .nav > li {
+      float:left;
+  }
+  
+  .nav li a {
+    background-color:rgba(33, 205, 244 ,0.8);
+      color:#fff;
+      text-decoration:none;
+      padding:10px 12px;
+      display:block;
+  }
+  
+  .nav li a:hover {
+    background-color:rgba(241, 157, 13 ,0.7);
+    
+
+  }
+  
+  .nav li ul {
+      display:none;
+      position:absolute;
+      min-width:140px;
+  }
+  
+  .nav li:hover > ul {
+      display:block;
+  }
+  
+  .nav li ul li {
+      position:relative;
+  }
+  
+  .nav li ul li ul {
+      right:-140px;
+      top:0px;
+  }
+
+.posicionamiento{
+
+    position:absolute;
+    top:180px;
+    right:450px;
+ 
+  }
+  .menus{
+    border-radius:25px;
+    
+  }
+  
+  
+
+  
   
