--- a/cliente/src/app/components/perfil/perfil.component.html
+++ b/cliente/src/app/components/perfil/perfil.component.html
@@ -18,91 +18,36 @@
 
  -->
 
-
 <html>
 	<head>
-		<title>Menu Desplegable</title>
-		<style type="text/css">
-			
-			* {
-				margin:0px;
-				padding:0px;
-			}
-			
-			#header {
-				margin:auto;
-				width:500px;
-				font-family:Arial, Helvetica, sans-serif;
-			}
-			
-			ul, ol {
-				list-style:none;
-			}
-			
-			.nav {
-				width:500px; /*Le establecemos un ancho*/
-				margin:0 auto; /*Centramos automaticamente*/
-			}
- 
-			.nav > li {
-				float:left;
-			}
-			
-			.nav li a {
-				background-color:#000;
-				color:#fff;
-				text-decoration:none;
-				padding:10px 12px;
-				display:block;
-			}
-			
-			.nav li a:hover {
-				background-color:#434343;
-			}
-			
-			.nav li ul {
-				display:none;
-				position:absolute;
-				min-width:140px;
-			}
-			
-			.nav li:hover > ul {
-				display:block;
-			}
-			
-			.nav li ul li {
-				position:relative;
-			}
-			
-			.nav li ul li ul {
-				right:-140px;
-				top:0px;
-			}
-			
-		</style>
-	
+		<title>Menu Desplegable</title>	
 	</head>
 	<body>
+		
 		<div id="header">
-			<nav> <!-- Aqui estamos iniciando la nueva etiqueta nav -->
+			<div class = "posicionamiento">
+			<nav > <!-- Aqui estamos iniciando la nueva etiqueta nav -->
 				<ul class="nav">
-					<li><a>Usuarios</a>
+                    
+					<li ><a class ="menus" ><h2>Usuarios</h2></a>
 						<ul>
-							<li><a href="/crear_usuarios">Agregar Usuarios</a></li>
-							<li><a href="/editar_usuarios">Editar Usuarios</a></li>
+							<li><a class ="menus"href="/crear_usuarios">Agregar Usuarios</a></li>
+							<li><a class ="menus"href="/editar_usuarios">Editar Usuarios</a></li>
 						</ul>
 					</li>
-					<li><a href="">Work</a>
+					<li ><a class ="menus" ><h2>Menus</h2></a>
 						<ul>
-							<li><a href="">Submenu1</a></li>
-							<li><a href="">Submenu2</a></li>
-							<li><a href="">Submenu3</a></li>
-							<li><a href="">Submenu4</a></li>
+							<li><a class ="menus" href="">Desayuno</a></li>
+							<li><a class ="menus" href="">Almuerzo</a></li>
+							<li><a class ="menus" href="">cena</a></li>
+							<li><a class ="menus" href="">extras</a></li>
 						</ul>
 					</li>
-					
+				
 				</ul>
 			</nav><!-- Aqui estamos cerrando la nueva etiqueta nav -->
+		
 		</div>
+	</div>
 	</body>
 </html>
