--- a/cliente/src/app/components/perfil/perfil.component.html
+++ b/cliente/src/app/components/perfil/perfil.component.html
@@ -84,10 +84,10 @@
 							<li><a href="/editar_complementos">Editar Complementos</a></li>
 						</ul>
 					</li>
-					<li><a>Works</a>
+					<li><a>Tipo de Servicios</a>
 						<ul>
-							<li><a href="">Works</a></li>
-							<li><a href="">Works</a></li>
+							<li><a href="/crear_tiposervicio">Agregar Tipo de Servicios</a></li>
+							<li><a href="/editar_tiposervicio">Editar Tipo de Servicios</a></li>
 						</ul>
 					</li>
 
