--- a/cliente/src/app/components/usuarios/usuarios.component.html
+++ b/cliente/src/app/components/usuarios/usuarios.component.html
@@ -8,13 +8,13 @@
       <!--<form class="login-container"> -->
        <form class="registro-container" method="POST">
         <p>
-          <input type="text" [(ngModel)]="usuarios.username" name='username' placeholder="Usuario" required="required"></p>
+          <input  class="cajitas"type="text" [(ngModel)]="usuarios.username" name='username' placeholder="Usuario" required="required"></p>
         <p>
-          <input type="password" [(ngModel)]="usuarios.password" name='password' placeholder="Password" required="required"></p>
+          <input class="cajitas" type="password" [(ngModel)]="usuarios.password" name='password' placeholder="Password" required="required"></p>
         <p>
-            <input type="text" [(ngModel)]="usuarios.role" name='role' placeholder="Rol" required="required"></p>
+            <input class="cajitas"  type="text" [(ngModel)]="usuarios.role" name='role' placeholder="Rol" required="required"></p>
         <p>
-          <input type="submit" (click)="edit ? editar() : registrar()" value="Guardar"></p>
+          <input class="boton"  type="submit" (click)="edit ? editar() : registrar()" value="Guardar"></p>
       </form>
     </div>
   
