--- a/cliente/src/app/components/perfil/perfil.component.html
+++ b/cliente/src/app/components/perfil/perfil.component.html
@@ -90,6 +90,12 @@
 							<li><a href="/editar_tiposervicio">Editar Tipo de Servicios</a></li>
 						</ul>
 					</li>
+					<li><a>Menu</a>
+						<ul>
+							<li><a href="/crear_menu">Agregar Menu</a></li>
+							<li><a href="/editar_menu">Editar Menu</a></li>
+						</ul>
+					</li>
 
 				</ul>
 			</nav><!-- Aqui estamos cerrando la nueva etiqueta nav -->
