--- a/cliente/src/app/components/usuarios/usuarios.component.html
+++ b/cliente/src/app/components/usuarios/usuarios.component.html
@@ -3,7 +3,7 @@
     <div class="registro">
       <div class="registro-triangle"></div>
       
-      <h2 class="registro-header">Crear Usuario</h2>
+      <h2 class="registro-header">Usuario</h2>
     
       <!--<form class="login-container"> -->
        <form class="registro-container" method="POST">
