--- a/cliente/src/app/components/menu2/menu2.component.html
+++ b/cliente/src/app/components/menu2/menu2.component.html
@@ -17,6 +17,7 @@
         <p>{{menu.descripcion}}</p>
         <p>{{menu.bebida}}</p>
         <p>{{menu.servicio}}</p>
+        <p>{{menu.complemento}}</p>
         <a [routerLink]="['/editar_menu', menu.idmenu]" class="btn btn-info btn-block">Editar Menu</a>
 
     </div>
