--- a/cliente/src/app/components/perfil/perfil.component.html
+++ b/cliente/src/app/components/perfil/perfil.component.html
@@ -96,6 +96,12 @@
 							<li><a href="/editar_menu">Editar Menu</a></li>
 						</ul>
 					</li>
+					<li><a>Facturacion</a>
+						<ul>
+							<li><a href="/crear_factura">Agregar Factura</a></li>
+							<li><a href="/editar_factura">Editar Factura</a></li>
+						</ul>
+					</li>
 
 				</ul>
 			</nav><!-- Aqui estamos cerrando la nueva etiqueta nav -->
