--- a/cliente/src/app/components/perfil/perfil.component.html
+++ b/cliente/src/app/components/perfil/perfil.component.html
@@ -102,6 +102,16 @@
 							<li><a href="/editar_factura">Editar Factura</a></li>
 						</ul>
 					</li>
+					<li><a>Cocina</a>
+						<ul>
+							<li><a href="/cocina">Pendientes</a></li>
+						</ul>
+					</li>
+					<li><a>Entregas</a>
+						<ul>
+							<li><a href="/pendientes">Pendientes</a></li>
+						</ul>
+					</li>
 
 				</ul>
 			</nav><!-- Aqui estamos cerrando la nueva etiqueta nav -->
