--- a/cliente/src/app/components/factura/factura.component.html
+++ b/cliente/src/app/components/factura/factura.component.html
@@ -34,7 +34,7 @@
               </form>
     </div>
   
-    <br>
+    
 
 
     <div class="registro" style="width: 50%; float: right;">
@@ -80,19 +80,154 @@
                           </li>
                         </ul>
         
+        
           <p>
-            <input type="text" [(ngModel)]="factura.serie" name='serie' placeholder="Serie" required="required"></p>
-          <p>
-            <input type="text" [(ngModel)]="factura.numerofactura" name='numerodeactura' placeholder="Numero de Factura" required="required"></p>
+            <input type="text" [(ngModel)]="detallepedido.cantidad" name='cantidad' placeholder="Cantidad" required="required"></p>
               <p>
-                  <input type="text" [(ngModel)]="factura.monto" name='monto' placeholder="Monto" required="required"></p>
+                  <input type="text" [(ngModel)]="detallepedido.total" name='Total' placeholder="Total" required="required"></p>
               
           <p>
             <input type="submit" (click)="edit ? editar() : registrar()" value="Agregar"></p>
                 </form>
       </div>
     
-
+      <table role="grid"
+       aria-labelledby="grid1Label"
+       class="data">
+       <tbody>
+        <tr>
+          <th>
+            Date
+          </th>
+          <th>
+            Type
+          </th>
+          <th>
+            Description
+          </th>
+          <th>
+            Amount
+          </th>
+          <th>
+            Balance
+          </th>
+        </tr>
+        <tr>
+          <td tabindex="-1">
+            01-Jan-16
+          </td>
+          <td tabindex="-1">
+            Deposit
+          </td>
+          <td>
+            <a tabindex="-1" href="#">
+              Cash Deposit
+            </a>
+          </td>
+          <td tabindex="-1">
+            $1,000,000.00
+          </td>
+          <td tabindex="-1">
+            $1,000,000.00
+          </td>
+        </tr>
+        <tr>
+          <td tabindex="-1">
+            02-Jan-16
+          </td>
+          <td tabindex="-1">
+            Debit
+          </td>
+          <td>
+            <a tabindex="-1" href="#">
+              Down Town Grocery
+            </a>
+          </td>
+          <td tabindex="-1">
+            $250.00
+          </td>
+          <td tabindex="-1">
+            $999,750.00
+          </td>
+        </tr>
+        <tr>
+          <td tabindex="-1">
+            03-Jan-16
+          </td>
+          <td tabindex="-1">
+            Debit
+          </td>
+          <td>
+            <a tabindex="-1" href="#">
+              Hot Coffee
+            </a>
+          </td>
+          <td tabindex="-1">
+            $9.00
+          </td>
+          <td tabindex="-1">
+            $999,741.00
+          </td>
+        </tr>
+        <tr>
+          <td tabindex="-1">
+            04-Jan-16
+          </td>
+          <td tabindex="-1">
+            Debit
+          </td>
+          <td>
+            <a tabindex="-1" href="#">
+              The Filling Station
+            </a>
+          </td>
+          <td tabindex="-1">
+            $88.00
+          </td>
+          <td tabindex="-1">
+            $999,653.00
+          </td>
+        </tr>
+        <tr>
+          <td tabindex="-1">
+            05-Jan-16
+          </td>
+          <td tabindex="-1">
+            Debit
+          </td>
+          <td>
+            <a tabindex="-1" href="#">
+              Tinker's Hardware
+            </a>
+          </td>
+          <td tabindex="-1">
+            $3,421.00
+          </td>
+          <td tabindex="-1">
+            $996,232.00
+          </td>
+        </tr>
+        <tr>
+          <td tabindex="-1">
+            06-Jan-16
+          </td>
+          <td tabindex="-1">
+            Debit
+          </td>
+          <td>
+            <a tabindex="-1" href="#">
+              Cutey's Salon
+            </a>
+          </td>
+          <td tabindex="-1">
+            $700.00
+          </td>
+          <td tabindex="-1">
+            $995,532.00
+          </td>
+        </tr>
+      </tbody>
+    </table>
 
   
 
