--- a/cliente/src/app/components/cocina/cocina.component.html
+++ b/cliente/src/app/components/cocina/cocina.component.html
@@ -6,7 +6,7 @@
 <div class="col-md-2" *ngFor="let detallepedidos of detallepedidos">
     <div class="card text-center">
         <div class="card-header bg-dark text-white d-flex justify-content-between align-items-center">
-            {{detallepedidos.status}}
+            {{detallepedidos.total}}
         <!-- <button class="btn btn-danger"></button> -->
         <button class="btn btn-danger" (click)=eliminarbebidas(bebidas.idbebidas)>Eliminar</button>
         </div>
@@ -14,7 +14,9 @@
         <img style="height: 150px; width: 100%; display: block;" src="https://www.softzone.es/app/uploads/2018/04/guest.png" class="card-img-top">
         
     <div class="card-body">
-        <p>{{bebidas.precio}}</p>
+        <p>{{detallepedidos.bebida}}</p>
+        <p>{{detallepedidos.complementos}}</p>
+        <p>{{detallepedidos.menu}}</p>
         
 
     </div>
