--- a/cliente/src/app/components/usuarios2/usuarios2.component.css
+++ b/cliente/src/app/components/usuarios2/usuarios2.component.css
@@ -1,7 +1,8 @@
 .col-md-2{
-    position: absolute;
-    top: 200px;
-    right: 1200px;
-    width: 325px;
+  position:absolute;
+  top: 80px;
+  right: 5000;
+  margin: 25px;
+  float: left;
 }
 
