--- a/cliente/src/app/components/login/login.component.html
+++ b/cliente/src/app/components/login/login.component.html
@@ -1,18 +1,18 @@
 <div class="container">
 
     <div class="login">
-      <div class="login-triangle"></div>
+     
       
       <h2 class="login-header">Log in</h2>
     
       <!--<form class="login-container"> -->
        <form class="login-container" method="POST">
         <p>
-          <input type="text" [(ngModel)]="username" name='username' placeholder="Usuario" required="required"></p>
+          <input class="cajas" type="text" [(ngModel)]="username" name='username' placeholder="Usuario" required="required"></p>
         <p>
-          <input type="password" [(ngModel)]="password" name='password' placeholder="Password" required="required"></p>
+          <input class="cajas" type="password" [(ngModel)]="password" name='password' placeholder="Password" required="required"></p>
         <p>
-          <input type="submit" (click)="login()" value="Log in"></p>
+          <input class="boton" type="submit" (click)="login()" value="Log in"></p>
       </form>
     </div>
   
