--- a/cliente/src/app/components/navigation/navigation.component.html
+++ b/cliente/src/app/components/navigation/navigation.component.html
@@ -1,5 +1,10 @@
+
+
+
+<link rel="stylesheet" href="navigation.component.css">
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <div class="container">
+  <div class="container" >
+    
     <a class="navbar-brand" href="/">Inicio</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -15,12 +20,11 @@
         
       </ul>
     </div>
-
+  
   </div>
   </nav>
-
-  <head alt="Responsive image" class="fondo1 img-fluid">
-    
-  </head>
-
+  <header  alt="Responsive image" class="fondo1 img-fluid">
+  </header>
+  
+  
   
