--- a/cliente/src/app/components/menu/menu.component.html
+++ b/cliente/src/app/components/menu/menu.component.html
@@ -8,11 +8,11 @@
       <!--<form class="login-container"> -->
        <form class="registro-container" method="POST">
         <p>
-          <input type="text" [(ngModel)]="menu.nombre" name='nombre' placeholder="Nombre" required="required"></p>
+          <input class="cajitas" type="text" [(ngModel)]="menu.nombre" name='nombre' placeholder="Nombre" required="required"></p>
         <p>
-          <input type="text" [(ngModel)]="menu.descripcion" name='descripcion' placeholder="Decripcion" required="required"></p>
+          <input class="cajitas" type="text" [(ngModel)]="menu.descripcion" name='descripcion' placeholder="Decripcion" required="required"></p>
           <p>
-            <input type="text" [(ngModel)]="menu.precio" name='precio' placeholder="Precio" required="required"></p>
+            <input class="cajitas" type="text" [(ngModel)]="menu.precio" name='precio' placeholder="Precio" required="required"></p>
         
             <p>
             <select name="complementos" [(ngModel)]="selcomplementos">
