--- a/cliente/src/app/components/bebidas/bebidas.component.html
+++ b/cliente/src/app/components/bebidas/bebidas.component.html
@@ -7,9 +7,9 @@
     
       <form class="registro-container" method="POST">
         <p>
-          <input type="text" [(ngModel)]="bebidas.nombre" name='nombre' placeholder="Nombre" required="required"></p>
+          <input class ="cajitas" type="text" [(ngModel)]="bebidas.nombre" name='nombre' placeholder="Nombre" required="required"></p>
         <p>
-            <input type="text" [(ngModel)]="bebidas.precio" name='precio' placeholder="Precio" required="required"></p>
+            <input class ="cajitas" type="text" [(ngModel)]="bebidas.precio" name='precio' placeholder="Precio" required="required"></p>
         <p>
           <input type="submit" (click)="edit ? editar() : registrar()" value="Guardar"><input type="button" onclick="location.href='http://localhost:4200/perfil'" value="Cancelar"> </p>
       </form>
