--- a/cliente/src/app/components/usuarios/usuarios.component.html
+++ b/cliente/src/app/components/usuarios/usuarios.component.html
@@ -8,11 +8,11 @@
       <!--<form class="login-container"> -->
        <form class="registro-container" method="POST">
         <p>
-          <input type="text" [(ngModel)]="usuarios.username" name='username' placeholder="Usuario" required="required"></p>
+          <input class="cajitas" type="text" [(ngModel)]="usuarios.username" name='username' placeholder="Usuario" required="required"></p>
         <p>
-          <input type="password" [(ngModel)]="usuarios.password" name='password' placeholder="Password" required="required"></p>
+          <input class="cajitas" type="password" [(ngModel)]="usuarios.password" name='password' placeholder="Password" required="required"></p>
         <p>
-            <input type="text" [(ngModel)]="usuarios.role" name='role' placeholder="Rol" required="required"></p>
+            <input class="cajitas" type="text" [(ngModel)]="usuarios.role" name='role' placeholder="Rol" required="required"></p>
         <p>
           <input type="submit" (click)="edit ? editar() : registrar()" value="Guardar"> <input type="button" onclick="location.href='http://localhost:4200/perfil'" value="Cancelar"> </p>
       </form>
