cambios en targest de servicios

--- a/cliente/src/app/components/complementos2/complementos2.component.html
+++ b/cliente/src/app/components/complementos2/complementos2.component.html
@@ -11,7 +11,7 @@
         <button class="btn btn-danger" (click)=eliminarcomplementos(complementos.idcomplementos)>Eliminar</button>
         </div>
         
-        <img style="height: 150px; width: 100%; display: block;" src="https://image.flaticon.com/icons/png/512/68/68901.png" class="card-img-top">
+        <img style="height: 150px; width: 100%; display: block;" src="https://i.pinimg.com/474x/b0/64/f6/b064f6f99c412144555860cfb0948a52.jpg" class="card-img-top">
         
     <div class="card-body">
         <p>{{complementos.precio}}</p>
