--- a/cliente/src/app/components/menu2/menu2.component.html
+++ b/cliente/src/app/components/menu2/menu2.component.html
@@ -11,7 +11,7 @@
         <button class="btn btn-danger" (click)=eliminarmenu(menu.idmenu)>Eliminar</button>
         </div>
         <p>{{menu.servicio}}</p>
-        <img style="height: 150px; width: 100%; display: block;" src="https://www.grupocrisol.com/recursos/bigs/3427_1.jpg" class="card-img-top">
+        <img style="height: 150px; width: 100%; display: block;" src="https://colegiopedrojrubio.es/web/wp-content/uploads/2017/05/menu.png" class="card-img-top">
         
     <div class="card-body">
         <p>{{menu.descripcion}}</p>
