--- a/cliente/src/app/components/tiposervicio2/tiposervicio2.component.html
+++ b/cliente/src/app/components/tiposervicio2/tiposervicio2.component.html
@@ -11,7 +11,7 @@
         <button class="btn btn-danger" (click)=eliminarbebidas(bebidas.idbebidas)>Eliminar</button>
         </div>
         
-        <img style="height: 150px; width: 100%; display: block;" src="https://www.softzone.es/app/uploads/2018/04/guest.png" class="card-img-top">
+        <img style="height: 150px; width: 100%; display: block;" src="https://petitfitbycris.com/wp-content/uploads/2019/04/1horario.jpg" class="card-img-top">
         
     <div class="card-body">
         <p>{{tiposervicio.precio}}</p>
