--- a/cliente/src/app/components/usuarios2/usuarios2.component.html
+++ b/cliente/src/app/components/usuarios2/usuarios2.component.html
@@ -11,7 +11,7 @@
         <button class="btn btn-danger" (click)=eliminarusuario(usuario.id)>Eliminar</button>
         </div>
         
-        <img style="height: 150px; width: 100%; display: block;" src="https://www.softzone.es/app/uploads/2018/04/guest.png" class="card-img-top">
+        <img style="height: 150px; width: 100%; display: block;" src="https://asknoetictips.files.wordpress.com/2017/09/usuario-registrado.jpg" class="card-img-top">
         
     <div class="card-body">
         <p>{{usuario.role}}</p>
