--- a/cliente/src/app/components/bebidas2/bebidas2.component.html
+++ b/cliente/src/app/components/bebidas2/bebidas2.component.html
@@ -11,7 +11,7 @@
         <button class="btn btn-danger" (click)=eliminarbebidas(bebidas.idbebidas)>Eliminar</button>
         </div>
         
-        <img style="height: 150px; width: 100%; display: block;" src="https://cdn.icon-icons.com/icons2/907/PNG/512/softdrinks-bottle-silhouette_icon-icons.com_70381.png" class="card-img-top">
+        <img style="height: 150px; width: 100%; display: block;" src="https://michollo.com/wp-content/uploads/2019/04/IMAGEN-PARA-CANALES-17-1024x865.jpg" class="card-img-top">
         
     <div class="card-body">
         <p>{{bebidas.precio}}</p>
